@@ -3,46 +3,56 @@
  * http://www.pwm-project.org
  *
  * Copyright (c) 2006-2009 Novell, Inc.
- * Copyright (c) 2009-2018 The PWM Project
+ * Copyright (c) 2009-2019 The PWM Project
  *
- * This program is free software; you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation; either version 2 of the License, or
- * (at your option) any later version.
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package password.pwm.http.servlet.configmanager;
 
+import lombok.Builder;
+import lombok.Value;
 import org.apache.commons.csv.CSVPrinter;
+import org.apache.commons.io.output.CountingOutputStream;
 import password.pwm.AppProperty;
 import password.pwm.PwmAboutProperty;
 import password.pwm.PwmApplication;
 import password.pwm.PwmConstants;
+import password.pwm.bean.SessionLabel;
 import password.pwm.bean.UserIdentity;
 import password.pwm.config.Configuration;
-import password.pwm.config.stored.StoredConfigurationImpl;
+import password.pwm.config.StoredValue;
+import password.pwm.config.stored.StoredConfigItemKey;
+import password.pwm.config.stored.StoredConfiguration;
+import password.pwm.config.stored.StoredConfigurationFactory;
+import password.pwm.config.stored.StoredConfigurationUtil;
 import password.pwm.error.PwmUnrecoverableException;
-import password.pwm.health.HealthMonitor;
 import password.pwm.health.HealthRecord;
 import password.pwm.http.ContextManager;
-import password.pwm.http.PwmRequest;
 import password.pwm.http.servlet.admin.AppDashboardData;
 import password.pwm.http.servlet.admin.UserDebugDataBean;
 import password.pwm.http.servlet.admin.UserDebugDataReader;
+import password.pwm.ldap.LdapConnectionService;
 import password.pwm.ldap.LdapDebugDataGenerator;
 import password.pwm.svc.PwmService;
 import password.pwm.svc.cache.CacheService;
-import password.pwm.svc.cluster.ClusterService;
+import password.pwm.svc.node.NodeService;
+import password.pwm.svc.stats.EpsStatistic;
+import password.pwm.svc.stats.Statistic;
+import password.pwm.svc.stats.StatisticsManager;
 import password.pwm.util.LDAPPermissionCalculator;
+import password.pwm.util.java.ClosableIterator;
+import password.pwm.util.java.DebugOutputBuilder;
 import password.pwm.util.java.FileSystemUtility;
 import password.pwm.util.java.JavaHelper;
 import password.pwm.util.java.JsonUtil;
@@ -66,18 +76,21 @@ import java.io.StringWriter;
 import java.io.Writer;
 import java.lang.management.ManagementFactory;
 import java.lang.management.ThreadInfo;
+import java.math.BigDecimal;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
-import java.util.Enumeration;
 import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
 import java.util.TreeMap;
-import java.util.TreeSet;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
@@ -98,66 +111,98 @@ public class DebugItemGenerator
             ThreadDumpDebugItemGenerator.class,
             FileInfoDebugItemGenerator.class,
             LogDebugItemGenerator.class,
+            LogJsonItemGenerator.class,
             LdapDebugItemGenerator.class,
             LDAPPermissionItemGenerator.class,
             LocalDBDebugGenerator.class,
             SessionDataGenerator.class,
             LdapRecentUserDebugGenerator.class,
             ClusterInfoDebugGenerator.class,
-            CacheServiceDebugItemGenerator.class
+            CacheServiceDebugItemGenerator.class,
+            RootFileSystemDebugItemGenerator.class,
+            LdapConnectionsDebugItemGenerator.class,
+            StatisticsDataDebugItemGenerator.class,
+            StatisticsEpsDataDebugItemGenerator.class
     ) );
 
-    static void outputZipDebugFile(
-            final PwmRequest pwmRequest,
-            final ZipOutputStream zipOutput,
-            final String pathPrefix
-    )
-            throws IOException, PwmUnrecoverableException
-    {
-        final PwmApplication pwmApplication = pwmRequest.getPwmApplication();
-        final String debugFileName = "zipDebugGeneration.csv";
+    private final PwmApplication pwmApplication;
+    private final Configuration obfuscatedConfiguration;
+    private final SessionLabel sessionLabel;
 
-        final ByteArrayOutputStream debugGeneratorLogBaos = new ByteArrayOutputStream();
-        final CSVPrinter debugGeneratorLogFile = JavaHelper.makeCsvPrinter( debugGeneratorLogBaos );
+    private static final Locale LOCALE = PwmConstants.DEFAULT_LOCALE;
+
+    public DebugItemGenerator( final PwmApplication pwmApplication, final SessionLabel sessionLabel )
+            throws PwmUnrecoverableException
+    {
+        this.pwmApplication = pwmApplication;
+        this.sessionLabel = sessionLabel;
+
+        final StoredConfiguration obfuscatedStoredConfig = StoredConfigurationUtil.copyConfigAndBlankAllPasswords( pwmApplication.getConfig().getStoredConfiguration() );
+        this.obfuscatedConfiguration = new Configuration( obfuscatedStoredConfig );
+    }
+
+    private String getFilenameBase()
+    {
+        return PwmConstants.PWM_APP_NAME + "-Support";
+    }
+
+    public String getFilename()
+    {
+        return getFilenameBase() + ".zip";
+    }
+
+    public void outputZipDebugFile( final ZipOutputStream zipOutput )
+            throws IOException
+    {
+        final String debugFileName = "zipDebugGeneration.csv";
+        final Instant startTime = Instant.now();
+        final DebugOutputBuilder debugGeneratorLogFile = new DebugOutputBuilder();
+        final DebugItemInput debugItemInput = new DebugItemInput( pwmApplication, sessionLabel, obfuscatedConfiguration );
+        debugGeneratorLogFile.appendLine( "beginning debug output" );
+        final String pathPrefix = getFilenameBase() + "/";
 
         for ( final Class<? extends DebugItemGenerator.Generator> serviceClass : DEBUG_ZIP_ITEM_GENERATORS )
         {
             try
             {
-                final Instant startTime = Instant.now();
-                LOGGER.trace( pwmRequest, "beginning output of item " + serviceClass.getSimpleName() );
-                final Object newInstance = serviceClass.newInstance();
-                final DebugItemGenerator.Generator newGeneratorItem = ( DebugItemGenerator.Generator ) newInstance;
+                final Instant itemStartTime = Instant.now();
+                LOGGER.trace( sessionLabel, () -> "beginning output of item " + serviceClass.getSimpleName() );
+                final DebugItemGenerator.Generator newGeneratorItem = serviceClass.getDeclaredConstructor().newInstance();
                 zipOutput.putNextEntry( new ZipEntry( pathPrefix + newGeneratorItem.getFilename() ) );
-                newGeneratorItem.outputItem( pwmApplication, pwmRequest, zipOutput );
+                newGeneratorItem.outputItem( debugItemInput, zipOutput );
                 zipOutput.closeEntry();
                 zipOutput.flush();
                 final String finishMsg = "completed output of " + newGeneratorItem.getFilename()
-                        + " in " + TimeDuration.fromCurrent( startTime ).asCompactString();
-                LOGGER.trace( pwmRequest, finishMsg );
-                debugGeneratorLogFile.printRecord( JavaHelper.toIsoDate( Instant.now() ), finishMsg );
+                        + " in " + TimeDuration.fromCurrent( itemStartTime ).asCompactString();
+                LOGGER.trace( sessionLabel, () -> finishMsg );
+                debugGeneratorLogFile.appendLine( finishMsg );
             }
-            catch ( Throwable e )
+            catch ( final Throwable e )
             {
                 final String errorMsg = "unexpected error executing debug item output class '" + serviceClass.getName() + "', error: " + e.toString();
-                LOGGER.error( pwmRequest, errorMsg );
-                debugGeneratorLogFile.printRecord( JavaHelper.toIsoDate( Instant.now() ), errorMsg );
+                LOGGER.error( sessionLabel, () -> errorMsg, e );
+                debugGeneratorLogFile.appendLine( errorMsg );
                 final Writer stackTraceOutput = new StringWriter();
                 e.printStackTrace( new PrintWriter( stackTraceOutput ) );
-                debugGeneratorLogFile.printRecord( stackTraceOutput );
+                debugGeneratorLogFile.appendLine( stackTraceOutput.toString() );
             }
+        }
+
+        {
+            final String msg = "completed in " + TimeDuration.compactFromCurrent( startTime );
+            debugGeneratorLogFile.appendLine( msg );
+            LOGGER.trace( sessionLabel, () -> msg );
         }
 
         try
         {
             zipOutput.putNextEntry( new ZipEntry( pathPrefix + debugFileName ) );
-            debugGeneratorLogFile.flush();
-            zipOutput.write( debugGeneratorLogBaos.toByteArray() );
+            zipOutput.write( debugGeneratorLogFile.toString().getBytes( PwmConstants.DEFAULT_CHARSET ) );
             zipOutput.closeEntry();
         }
-        catch ( Exception e )
+        catch ( final Exception e )
         {
-            LOGGER.error( "error generating " + debugFileName + ": " + e.getMessage() );
+            LOGGER.error( () -> "error generating " + debugFileName + ": " + e.getMessage() );
         }
 
         zipOutput.flush();
@@ -172,11 +217,22 @@ public class DebugItemGenerator
         }
 
         @Override
-        public void outputItem( final PwmApplication pwmApplication, final PwmRequest pwmRequest, final OutputStream outputStream ) throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
-            final StoredConfigurationImpl storedConfiguration = ConfigManagerServlet.readCurrentConfiguration( pwmRequest );
-            storedConfiguration.resetAllPasswordValues( "value removed from " + PwmConstants.PWM_APP_NAME + "-Support configuration export" );
-            final String jsonOutput = JsonUtil.serialize( storedConfiguration.toJsonDebugObject(), JsonUtil.Flag.PrettyPrint );
+            final StoredConfiguration storedConfiguration = debugItemInput.getObfuscatedConfiguration().getStoredConfiguration();
+            final TreeMap<String, Object> outputObject = new TreeMap<>();
+
+            for ( final StoredConfigItemKey storedConfigItemKey : storedConfiguration.modifiedItems() )
+            {
+                if ( storedConfigItemKey.getRecordType() == StoredConfigItemKey.RecordType.SETTING )
+                {
+                    final String key = storedConfigItemKey.getLabel( PwmConstants.DEFAULT_LOCALE );
+                    final StoredValue value = storedConfiguration.readSetting( storedConfigItemKey.toPwmSetting(), storedConfigItemKey.getProfileID() );
+                    outputObject.put( key, value );
+                }
+            }
+
+            final String jsonOutput = JsonUtil.serializeMap( outputObject, JsonUtil.Flag.PrettyPrint );
             outputStream.write( jsonOutput.getBytes( PwmConstants.DEFAULT_CHARSET ) );
         }
     }
@@ -190,10 +246,10 @@ public class DebugItemGenerator
         }
 
         @Override
-        public void outputItem( final PwmApplication pwmApplication, final PwmRequest pwmRequest, final OutputStream outputStream ) throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
-            final StoredConfigurationImpl storedConfiguration = ConfigManagerServlet.readCurrentConfiguration( pwmRequest );
-            storedConfiguration.resetAllPasswordValues( "value removed from " + PwmConstants.PWM_APP_NAME + "-Support configuration export" );
+            final Locale locale = PwmConstants.DEFAULT_LOCALE;
+            final StoredConfiguration storedConfiguration = debugItemInput.getObfuscatedConfiguration().getStoredConfiguration();
 
             final StringWriter writer = new StringWriter();
             writer.write( "Configuration Debug Output for "
@@ -203,19 +259,21 @@ public class DebugItemGenerator
             writer.write( "This file is " + PwmConstants.DEFAULT_CHARSET.displayName() + " encoded\n" );
 
             writer.write( "\n" );
-            final Map<String, String> modifiedSettings = new TreeMap<>(
-                    storedConfiguration.getModifiedSettingDebugValues( PwmConstants.DEFAULT_LOCALE, true )
-            );
+            final Set<StoredConfigItemKey> modifiedSettings = storedConfiguration.modifiedItems();
 
-            for ( final Map.Entry<String, String> entry : modifiedSettings.entrySet() )
+            for ( final StoredConfigItemKey storedConfigItemKey : modifiedSettings )
             {
-                final String key = entry.getKey();
-                final String value = entry.getValue();
-                writer.write( ">> Setting > " + key );
-                writer.write( "\n" );
-                writer.write( value );
-                writer.write( "\n" );
-                writer.write( "\n" );
+                if ( storedConfigItemKey.getRecordType() == StoredConfigItemKey.RecordType.SETTING )
+                {
+                    final String key = storedConfigItemKey.toPwmSetting().toMenuLocationDebug( storedConfigItemKey.getProfileID(), locale );
+                    final String value = storedConfiguration.readSetting( storedConfigItemKey.toPwmSetting(), storedConfigItemKey.getProfileID() ).toDebugString( locale );
+                    writer.write( ">> Setting > " + key );
+                    writer.write( "\n" );
+                    writer.write( value );
+                    writer.write( "\n" );
+                    writer.write( "\n" );
+
+                }
             }
 
             outputStream.write( writer.toString().getBytes( PwmConstants.DEFAULT_CHARSET ) );
@@ -231,15 +289,17 @@ public class DebugItemGenerator
         }
 
         @Override
-        public void outputItem( final PwmApplication pwmApplication, final PwmRequest pwmRequest, final OutputStream outputStream ) throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
-            final StoredConfigurationImpl storedConfiguration = ConfigManagerServlet.readCurrentConfiguration( pwmRequest );
-            storedConfiguration.resetAllPasswordValues( "value removed from " + PwmConstants.PWM_APP_NAME + "-Support configuration export" );
+            final StoredConfiguration storedConfiguration = debugItemInput.getObfuscatedConfiguration().getStoredConfiguration();
 
-            final ByteArrayOutputStream baos = new ByteArrayOutputStream();
-            storedConfiguration.toXml( baos );
-            outputStream.write( baos.toByteArray() );
-        }
+            // temporary output stream required because .toXml closes stream.
+            final ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
+            final StoredConfigurationFactory.OutputSettings outputSettings = StoredConfigurationFactory.OutputSettings.builder()
+                    .mode( StoredConfigurationFactory.OutputSettings.SecureOutputMode.STRIPPED )
+                    .build();
+            StoredConfigurationFactory.toXml( storedConfiguration, byteArrayOutputStream, outputSettings );
+            outputStream.write( byteArrayOutputStream.toByteArray() );        }
     }
 
     static class AboutItemGenerator implements Generator
@@ -251,26 +311,12 @@ public class DebugItemGenerator
         }
 
         @Override
-        public void outputItem( final PwmApplication pwmApplication, final PwmRequest pwmRequest, final OutputStream outputStream ) throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
-            final Properties outputProps = new Properties()
-            {
-                public synchronized Enumeration<Object> keys( )
-                {
-                    return Collections.enumeration( new TreeSet<>( super.keySet() ) );
-                }
-            };
-
-            final Map<PwmAboutProperty, String> infoBean = PwmAboutProperty.makeInfoBean( pwmApplication );
-            for ( final Map.Entry<PwmAboutProperty, String> entry : infoBean.entrySet() )
-            {
-                final PwmAboutProperty aboutProperty = entry.getKey();
-                final String value = entry.getValue();
-                outputProps.put( aboutProperty.toString().replace( "_", "." ), value );
-            }
-            final ByteArrayOutputStream baos = new ByteArrayOutputStream();
-            outputProps.store( baos, JavaHelper.toIsoDate( Instant.now() ) );
-            outputStream.write( baos.toByteArray() );
+            final Properties outputProps = new JavaHelper.SortedProperties();
+            final Map<PwmAboutProperty, String> infoBean = PwmAboutProperty.makeInfoBean( debugItemInput.getPwmApplication() );
+            outputProps.putAll( PwmAboutProperty.toStringMap( infoBean ) );
+            outputProps.store( outputStream, JavaHelper.toIsoDate( Instant.now() ) );
         }
     }
 
@@ -283,13 +329,11 @@ public class DebugItemGenerator
         }
 
         @Override
-        public void outputItem( final PwmApplication pwmApplication, final PwmRequest pwmRequest, final OutputStream outputStream ) throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
-            final Properties outputProps = JavaHelper.newSortedProperties();
+            final Properties outputProps = new JavaHelper.SortedProperties();
             outputProps.putAll( System.getenv() );
-            final ByteArrayOutputStream baos = new ByteArrayOutputStream();
-            outputProps.store( baos, JavaHelper.toIsoDate( Instant.now() ) );
-            outputStream.write( baos.toByteArray() );
+            outputProps.store( outputStream, JavaHelper.toIsoDate( Instant.now() ) );
         }
     }
 
@@ -302,20 +346,18 @@ public class DebugItemGenerator
         }
 
         @Override
-        public void outputItem( final PwmApplication pwmApplication, final PwmRequest pwmRequest, final OutputStream outputStream ) throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
 
-            final Configuration config = pwmRequest.getConfig();
-            final Properties outputProps = JavaHelper.newSortedProperties();
+            final Configuration config = debugItemInput.getObfuscatedConfiguration();
+            final Properties outputProps = new JavaHelper.SortedProperties();
 
             for ( final AppProperty appProperty : AppProperty.values() )
             {
-                outputProps.setProperty( appProperty.getKey(), config.readAppProperty( appProperty ) );
+                outputProps.put( appProperty.getKey(), config.readAppProperty( appProperty ) );
             }
 
-            final ByteArrayOutputStream baos = new ByteArrayOutputStream();
-            outputProps.store( baos, JavaHelper.toIsoDate( Instant.now() ) );
-            outputStream.write( baos.toByteArray() );
+            outputStream.write( JsonUtil.serializeMap( outputProps ).getBytes( PwmConstants.DEFAULT_CHARSET ) );
         }
     }
 
@@ -328,9 +370,9 @@ public class DebugItemGenerator
         }
 
         @Override
-        public void outputItem( final PwmApplication pwmApplication, final PwmRequest pwmRequest, final OutputStream outputStream )
-                throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
+            final PwmApplication pwmApplication = debugItemInput.getPwmApplication();
             final LinkedHashMap<String, Object> outputMap = new LinkedHashMap<>();
 
             {
@@ -363,9 +405,10 @@ public class DebugItemGenerator
         }
 
         @Override
-        public void outputItem( final PwmApplication pwmApplication, final PwmRequest pwmRequest, final OutputStream outputStream ) throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
-            final Set<HealthRecord> records = pwmApplication.getHealthMonitor().getHealthRecords( HealthMonitor.CheckTimeliness.CurrentButNotAncient );
+            final PwmApplication pwmApplication = debugItemInput.getPwmApplication();
+            final Set<HealthRecord> records = pwmApplication.getHealthMonitor().getHealthRecords();
             final String recordJson = JsonUtil.serializeCollection( records, JsonUtil.Flag.PrettyPrint );
             outputStream.write( recordJson.getBytes( PwmConstants.DEFAULT_CHARSET ) );
         }
@@ -380,18 +423,18 @@ public class DebugItemGenerator
         }
 
         @Override
-        public void outputItem( final PwmApplication pwmApplication, final PwmRequest pwmRequest, final OutputStream outputStream ) throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
 
-            final ByteArrayOutputStream baos = new ByteArrayOutputStream();
-            final PrintWriter writer = new PrintWriter( new OutputStreamWriter( baos, PwmConstants.DEFAULT_CHARSET ) );
+            final ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
+            final PrintWriter writer = new PrintWriter( new OutputStreamWriter( byteArrayOutputStream, PwmConstants.DEFAULT_CHARSET ) );
             final ThreadInfo[] threads = ManagementFactory.getThreadMXBean().dumpAllThreads( true, true );
             for ( final ThreadInfo threadInfo : threads )
             {
                 writer.write( JavaHelper.threadInfoToString( threadInfo ) );
             }
             writer.flush();
-            outputStream.write( baos.toByteArray() );
+            outputStream.write( byteArrayOutputStream.toByteArray() );
         }
     }
 
@@ -404,13 +447,13 @@ public class DebugItemGenerator
         }
 
         @Override
-        public void outputItem( final PwmApplication pwmApplication, final PwmRequest pwmRequest, final OutputStream outputStream ) throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
             final List<LdapDebugDataGenerator.LdapDebugInfo> ldapDebugInfos = LdapDebugDataGenerator.makeLdapDebugInfos(
-                    pwmApplication,
-                    pwmRequest.getSessionLabel(),
-                    pwmApplication.getConfig(),
-                    pwmRequest.getLocale()
+                    debugItemInput.getPwmApplication(),
+                    debugItemInput.getSessionLabel(),
+                    debugItemInput.getObfuscatedConfiguration(),
+                    LOCALE
             );
             final Writer writer = new OutputStreamWriter( outputStream, PwmConstants.DEFAULT_CHARSET );
             writer.write( JsonUtil.serializeCollection( ldapDebugInfos, JsonUtil.Flag.PrettyPrint ) );
@@ -428,10 +471,11 @@ public class DebugItemGenerator
         }
 
         @Override
-        public void outputItem( final PwmApplication pwmApplication, final PwmRequest pwmRequest, final OutputStream outputStream ) throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
-            final List<FileSystemUtility.FileSummaryInformation> fileSummaryInformations = new ArrayList<>();
+            final PwmApplication pwmApplication = debugItemInput.getPwmApplication();
             final File applicationPath = pwmApplication.getPwmEnvironment().getApplicationPath();
+            final List<File> interestedFiles = new ArrayList<>(  );
 
             if ( pwmApplication.getPwmEnvironment().getContextManager() != null )
             {
@@ -444,13 +488,13 @@ public class DebugItemGenerator
 
                         if ( servletRootPath != null )
                         {
-                            fileSummaryInformations.addAll( FileSystemUtility.readFileInformation( webInfPath ) );
+                            interestedFiles.add( webInfPath );
                         }
                     }
                 }
-                catch ( Exception e )
+                catch ( final Exception e )
                 {
-                    LOGGER.error( pwmRequest, "unable to generate webInfPath fileMd5sums during zip debug building: " + e.getMessage() );
+                    LOGGER.error( debugItemInput.getSessionLabel(), () -> "unable to generate webInfPath fileMd5sums during zip debug building: " + e.getMessage() );
                 }
             }
 
@@ -458,14 +502,16 @@ public class DebugItemGenerator
             {
                 try
                 {
-                    fileSummaryInformations.addAll( FileSystemUtility.readFileInformation( applicationPath ) );
+                    interestedFiles.add( applicationPath );
                 }
-                catch ( Exception e )
+                catch ( final Exception e )
                 {
-                    LOGGER.error( pwmRequest, "unable to generate appPath fileMd5sums during zip debug building: " + e.getMessage() );
+                    LOGGER.error( debugItemInput.getSessionLabel(), () -> "unable to generate appPath fileMd5sums during zip debug building: " + e.getMessage() );
                 }
             }
 
+
+            try ( ClosableIterator<FileSystemUtility.FileSummaryInformation> iter = FileSystemUtility.readFileInformation( interestedFiles ); )
             {
                 final CSVPrinter csvPrinter = JavaHelper.makeCsvPrinter( outputStream );
                 {
@@ -474,11 +520,13 @@ public class DebugItemGenerator
                     headerRow.add( "Filename" );
                     headerRow.add( "Last Modified" );
                     headerRow.add( "Size" );
-                    headerRow.add( "sha1sum" );
+                    headerRow.add( "Checksum" );
                     csvPrinter.printComment( StringUtil.join( headerRow, "," ) );
                 }
-                for ( final FileSystemUtility.FileSummaryInformation fileSummaryInformation : fileSummaryInformations )
+
+                while ( iter.hasNext() )
                 {
+                    final FileSystemUtility.FileSummaryInformation fileSummaryInformation = iter.next();
                     try
                     {
                         final List<String> dataRow = new ArrayList<>();
@@ -486,12 +534,12 @@ public class DebugItemGenerator
                         dataRow.add( fileSummaryInformation.getFilename() );
                         dataRow.add( JavaHelper.toIsoDate( fileSummaryInformation.getModified() ) );
                         dataRow.add( String.valueOf( fileSummaryInformation.getSize() ) );
-                        dataRow.add( fileSummaryInformation.getSha1sum() );
+                        dataRow.add( Long.toString( fileSummaryInformation.getChecksum() ) );
                         csvPrinter.printRecord( dataRow );
                     }
-                    catch ( Exception e )
+                    catch ( final Exception e )
                     {
-                        LOGGER.trace( "error generating file summary info: " + e.getMessage() );
+                        LOGGER.trace( () -> "error generating file summary info: " + e.getMessage() );
                     }
                 }
                 csvPrinter.flush();
@@ -508,37 +556,67 @@ public class DebugItemGenerator
         }
 
         @Override
-        public void outputItem(
-                final PwmApplication pwmApplication,
-                final PwmRequest pwmRequest,
-                final OutputStream outputStream
-        ) throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
+            final Instant startTime = Instant.now();
+            final Function<PwmLogEvent, String> logEventFormatter = PwmLogEvent::toLogString;
 
-            final int maxCount = Integer.parseInt( pwmRequest.getConfig().readAppProperty( AppProperty.CONFIG_MANAGER_ZIPDEBUG_MAXLOGLINES ) );
-            final int maxSeconds = Integer.parseInt( pwmRequest.getConfig().readAppProperty( AppProperty.CONFIG_MANAGER_ZIPDEBUG_MAXLOGSECONDS ) );
-            final LocalDBSearchQuery searchParameters = LocalDBSearchQuery.builder()
-                    .minimumLevel( PwmLogLevel.TRACE )
-                    .maxEvents( maxCount )
-                    .maxQueryTime( TimeDuration.of( maxSeconds, TimeDuration.Unit.SECONDS ) )
-                    .build();
+            outputLogs( debugItemInput.getPwmApplication(), outputStream, logEventFormatter );
+            LOGGER.trace( () ->  "debug log output completed in " + TimeDuration.compactFromCurrent( startTime ) );
+        }
+    }
 
-            final LocalDBSearchResults searchResults = pwmApplication.getLocalDBLogger().readStoredEvents(
-                    searchParameters );
-            int counter = 0;
-            while ( searchResults.hasNext() )
+    static class LogJsonItemGenerator implements Generator
+    {
+        @Override
+        public String getFilename( )
+        {
+            return "debug.json";
+        }
+
+        @Override
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
+        {
+            final Instant startTime = Instant.now();
+            final Function<PwmLogEvent, String> logEventFormatter = pwmLogEvent -> JsonUtil.serialize( pwmLogEvent );
+
+            outputLogs( debugItemInput.getPwmApplication(), outputStream, logEventFormatter );
+            LOGGER.trace( () ->  "debug json output completed in " + TimeDuration.compactFromCurrent( startTime ) );
+        }
+    }
+
+    private static void outputLogs(
+            final PwmApplication pwmApplication,
+            final OutputStream outputStream,
+            final Function<PwmLogEvent, String> logEventFormatter
+    )
+            throws Exception
+    {
+        final long maxByteCount = JavaHelper.silentParseLong( pwmApplication.getConfig().readAppProperty( AppProperty.CONFIG_MANAGER_ZIPDEBUG_MAXLOGBYTES ), 10_000_000 );
+        final int maxSeconds = JavaHelper.silentParseInt( pwmApplication.getConfig().readAppProperty( AppProperty.CONFIG_MANAGER_ZIPDEBUG_MAXLOGSECONDS ), 60 );
+        final LocalDBSearchQuery searchParameters = LocalDBSearchQuery.builder()
+                .minimumLevel( PwmLogLevel.TRACE )
+                .maxEvents( Integer.MAX_VALUE )
+                .maxQueryTime( TimeDuration.of( maxSeconds, TimeDuration.Unit.SECONDS ) )
+                .build();
+
+        final LocalDBSearchResults searchResults = pwmApplication.getLocalDBLogger().readStoredEvents( searchParameters );
+        final CountingOutputStream countingOutputStream = new CountingOutputStream( outputStream );
+
+        final Writer writer = new OutputStreamWriter( countingOutputStream, PwmConstants.DEFAULT_CHARSET );
+        {
+            while ( searchResults.hasNext() && countingOutputStream.getByteCount() < maxByteCount )
             {
                 final PwmLogEvent event = searchResults.next();
-                outputStream.write( event.toLogString().getBytes( PwmConstants.DEFAULT_CHARSET ) );
-                outputStream.write( "\n".getBytes( PwmConstants.DEFAULT_CHARSET ) );
-                counter++;
-                if ( counter % 1000 == 0 )
-                {
-                    outputStream.flush();
-                }
+                final String output = logEventFormatter.apply( event );
+                writer.write( output );
+                writer.write( "\n" );
             }
-            LOGGER.trace( "output " + counter + " lines to " + this.getFilename() );
+
         }
+
+        // do not close writer because underlying stream should not be closed.
+        writer.flush();
     }
 
     static class LDAPPermissionItemGenerator implements Generator
@@ -550,14 +628,10 @@ public class DebugItemGenerator
         }
 
         @Override
-        public void outputItem(
-                final PwmApplication pwmApplication,
-                final PwmRequest pwmRequest,
-                final OutputStream outputStream
-        ) throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
 
-            final StoredConfigurationImpl storedConfiguration = ConfigManagerServlet.readCurrentConfiguration( pwmRequest );
+            final StoredConfiguration storedConfiguration = debugItemInput.getObfuscatedConfiguration().getStoredConfiguration();
             final LDAPPermissionCalculator ldapPermissionCalculator = new LDAPPermissionCalculator( storedConfiguration );
 
             final CSVPrinter csvPrinter = JavaHelper.makeCsvPrinter( outputStream );
@@ -594,13 +668,9 @@ public class DebugItemGenerator
         }
 
         @Override
-        public void outputItem(
-                final PwmApplication pwmApplication,
-                final PwmRequest pwmRequest,
-                final OutputStream outputStream
-        ) throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
-            final LocalDB localDB = pwmApplication.getLocalDB();
+            final LocalDB localDB = debugItemInput.getPwmApplication().getLocalDB();
             final Map<String, Serializable> serializableMap = localDB.debugInfo();
             outputStream.write( JsonUtil.serializeMap( serializableMap, JsonUtil.Flag.PrettyPrint ).getBytes( PwmConstants.DEFAULT_CHARSET ) );
         }
@@ -615,14 +685,10 @@ public class DebugItemGenerator
         }
 
         @Override
-        public void outputItem(
-                final PwmApplication pwmApplication,
-                final PwmRequest pwmRequest,
-                final OutputStream outputStream
-        )
-                throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
-            pwmApplication.getSessionTrackService().outputToCsv( pwmRequest.getLocale(), pwmRequest.getConfig(), outputStream );
+            final PwmApplication pwmApplication = debugItemInput.getPwmApplication();
+            pwmApplication.getSessionTrackService().outputToCsv( LOCALE, pwmApplication.getConfig(), outputStream );
         }
     }
 
@@ -634,14 +700,9 @@ public class DebugItemGenerator
             return "recentUserDebugData.json";
         }
 
-        @Override
-        public void outputItem(
-                final PwmApplication pwmApplication,
-                final PwmRequest pwmRequest,
-                final OutputStream outputStream
-        )
-                throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
+            final PwmApplication pwmApplication = debugItemInput.getPwmApplication();
             final List<UserIdentity> recentUsers = pwmApplication.getSessionTrackService().getRecentLogins();
             final List<UserDebugDataBean> recentDebugBeans = new ArrayList<>();
 
@@ -649,8 +710,8 @@ public class DebugItemGenerator
             {
                 final UserDebugDataBean dataBean = UserDebugDataReader.readUserDebugData(
                         pwmApplication,
-                        pwmRequest.getLocale(),
-                        pwmRequest.getSessionLabel(),
+                        LOCALE,
+                        debugItemInput.getSessionLabel(),
                         userIdentity
                 );
                 recentDebugBeans.add( dataBean );
@@ -669,22 +730,18 @@ public class DebugItemGenerator
         }
 
         @Override
-        public void outputItem(
-                final PwmApplication pwmApplication,
-                final PwmRequest pwmRequest,
-                final OutputStream outputStream
-        )
-                throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
-            final ClusterService clusterService = pwmApplication.getClusterService();
+            final PwmApplication pwmApplication = debugItemInput.getPwmApplication();
+            final NodeService nodeService = pwmApplication.getClusterService();
 
             final Map<String, Serializable> debugOutput = new LinkedHashMap<>();
-            debugOutput.put( "status", clusterService.status() );
+            debugOutput.put( "status", nodeService.status() );
 
-            if ( clusterService.status() == PwmService.STATUS.OPEN )
+            if ( nodeService.status() == PwmService.STATUS.OPEN )
             {
-                debugOutput.put( "isMaster", clusterService.isMaster() );
-                debugOutput.put( "nodes", new ArrayList<>( clusterService.nodes() ) );
+                debugOutput.put( "isMaster", nodeService.isMaster() );
+                debugOutput.put( "nodes", new ArrayList<>( nodeService.nodes() ) );
             }
 
             outputStream.write( JsonUtil.serializeMap( debugOutput, JsonUtil.Flag.PrettyPrint ).getBytes( PwmConstants.DEFAULT_CHARSET ) );
@@ -700,13 +757,9 @@ public class DebugItemGenerator
         }
 
         @Override
-        public void outputItem(
-                final PwmApplication pwmApplication,
-                final PwmRequest pwmRequest,
-                final OutputStream outputStream
-        )
-                throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
+            final PwmApplication pwmApplication = debugItemInput.getPwmApplication();
             final CacheService cacheService = pwmApplication.getCacheService();
 
             final Map<String, Serializable> debugOutput = new LinkedHashMap<>( cacheService.debugInfo() );
@@ -723,21 +776,141 @@ public class DebugItemGenerator
         }
 
         @Override
-        public void outputItem(
-                final PwmApplication pwmApplication,
-                final PwmRequest pwmRequest,
-                final OutputStream outputStream
-        )
-                throws Exception
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
         {
-            final ContextManager contextManager = ContextManager.getContextManager( pwmRequest );
+            final PwmApplication pwmApplication = debugItemInput.getPwmApplication();
+            final ContextManager contextManager = pwmApplication.getPwmEnvironment().getContextManager();
             final AppDashboardData appDashboardData = AppDashboardData.makeDashboardData(
                     pwmApplication,
                     contextManager,
-                    pwmRequest.getLocale()
+                    LOCALE
             );
 
             outputStream.write( JsonUtil.serialize( appDashboardData, JsonUtil.Flag.PrettyPrint ).getBytes( PwmConstants.DEFAULT_CHARSET ) );
+        }
+    }
+
+    static class StatisticsDataDebugItemGenerator implements Generator
+    {
+        @Override
+        public String getFilename()
+        {
+            return "statistics.csv";
+        }
+
+        @Override
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
+        {
+            final PwmApplication pwmApplication = debugItemInput.getPwmApplication();
+            final StatisticsManager statsManager = pwmApplication.getStatisticsManager();
+            statsManager.outputStatsToCsv( outputStream, LOCALE, true );
+        }
+    }
+
+    static class LdapConnectionsDebugItemGenerator implements Generator
+    {
+        @Override
+        public String getFilename()
+        {
+            return "ldap-connections.json";
+        }
+
+        @Override
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
+        {
+            final PwmApplication pwmApplication = debugItemInput.getPwmApplication();
+            final List<LdapConnectionService.ConnectionInfo> connectionInfos = pwmApplication.getLdapConnectionService().getConnectionInfos();
+            final Writer writer = new OutputStreamWriter( outputStream, PwmConstants.DEFAULT_CHARSET );
+            writer.write( JsonUtil.serializeCollection( connectionInfos, JsonUtil.Flag.PrettyPrint ) );
+            writer.flush();
+        }
+    }
+
+    static class StatisticsEpsDataDebugItemGenerator implements Generator
+    {
+        @Override
+        public String getFilename()
+        {
+            return "statistics-eps.csv";
+        }
+
+        @Override
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
+        {
+            final PwmApplication pwmApplication = debugItemInput.getPwmApplication();
+            final StatisticsManager statsManager = pwmApplication.getStatisticsManager();
+            final CSVPrinter csvPrinter = JavaHelper.makeCsvPrinter( outputStream );
+            {
+                final List<String> headerRow = new ArrayList<>();
+                headerRow.add( "Counter" );
+                headerRow.add( "Duration" );
+                headerRow.add( "Events/Second" );
+                csvPrinter.printComment( StringUtil.join( headerRow, "," ) );
+            }
+            for ( final EpsStatistic epsStatistic : EpsStatistic.values() )
+            {
+                for ( final Statistic.EpsDuration epsDuration : Statistic.EpsDuration.values() )
+                {
+                    try
+                    {
+                        final List<String> dataRow = new ArrayList<>();
+                        final BigDecimal value = statsManager.readEps( epsStatistic, epsDuration );
+                        final String sValue = value.toPlainString();
+                        dataRow.add( epsStatistic.getLabel( LOCALE ) );
+                        dataRow.add( epsDuration.getTimeDuration().asCompactString() );
+                        dataRow.add( sValue );
+                        csvPrinter.printRecord( dataRow );
+                    }
+                    catch ( final Exception e )
+                    {
+                        LOGGER.trace( () -> "error generating csv-stats summary info: " + e.getMessage() );
+                    }
+                }
+            }
+            csvPrinter.flush();
+        }
+    }
+
+    static class RootFileSystemDebugItemGenerator implements Generator
+    {
+        @Override
+        public String getFilename( )
+        {
+            return "filesystem-data.json";
+        }
+
+        @Override
+        public void outputItem( final DebugItemInput debugItemInput, final OutputStream outputStream ) throws Exception
+        {
+            final Collection<RootFileSystemInfo> rootInfos = RootFileSystemInfo.forAllRootFileSystems();
+            outputStream.write( JsonUtil.serializeCollection( rootInfos, JsonUtil.Flag.PrettyPrint ).getBytes( PwmConstants.DEFAULT_CHARSET ) );
+        }
+
+        @Value
+        @Builder
+        private static class RootFileSystemInfo implements Serializable
+        {
+            private String rootPath;
+            private long totalSpace;
+            private long freeSpace;
+            private long usableSpace;
+
+            static Collection<RootFileSystemInfo> forAllRootFileSystems()
+            {
+                return Arrays.stream( File.listRoots() )
+                        .map( RootFileSystemInfo::forRoot )
+                        .collect( Collectors.toList() );
+            }
+
+            static RootFileSystemInfo forRoot( final File fileRoot )
+            {
+                return RootFileSystemInfo.builder()
+                        .rootPath( fileRoot.getAbsolutePath() )
+                        .totalSpace( fileRoot.getTotalSpace() )
+                        .freeSpace( fileRoot.getFreeSpace() )
+                        .usableSpace( fileRoot.getUsableSpace() )
+                        .build();
+            }
         }
     }
 
@@ -747,10 +920,17 @@ public class DebugItemGenerator
         String getFilename( );
 
         void outputItem(
-                PwmApplication pwmApplication,
-                PwmRequest pwmRequest,
+                DebugItemInput debugItemInput,
                 OutputStream outputStream
         ) throws Exception;
+    }
+
+    @Value
+    private static class DebugItemInput
+    {
+        private final PwmApplication pwmApplication;
+        private final SessionLabel sessionLabel;
+        private final Configuration obfuscatedConfiguration;
     }
 
 }
